added modal component

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -48,4 +48,7 @@
   --color-green-rgb: 7, 188, 76;
   --color-green-deep: #1b9a59;
   --color-green-deep-rgb: 27, 154, 89;
+
+  --z-index-modal-backdrop: 400;
+  --z-index-modal: 500;
 }
