added util class

--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -49,3 +49,15 @@
 .position-fixed {
   position: fixed;
 }
+
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
