--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -1,9 +1,17 @@
 .container {
   composes: display-inline-block border-circle from global;
-  height: 50px;
-  width: 50px;
   border: 1px solid var(--color-grey-200);
   background-position: center top -1px;
+}
+
+.size-normal {
+  height: 50px;
+  width: 50px;
+}
+
+.size-small {
+  height: 40px;
+  width: 40px;
 }
 
 .light-border {
