--- a/src/routes/Chat/components/ChatWindow/ChatWindow.css
+++ b/src/routes/Chat/components/ChatWindow/ChatWindow.css
@@ -1,5 +1,5 @@
 .container {
-  composes: p-16 from global;
+  composes: p-16 display-flex flex-column from global;
   background-color: var(--color-grey-200);
   flex: 1;
   border-radius: 0 0 4px 4px;
