--- a/src/routes/Chat/components/ChatHeader/ChatHeader.css
+++ b/src/routes/Chat/components/ChatHeader/ChatHeader.css
@@ -1,6 +1,15 @@
 .container {
-  composes: pl-16 pr-16 pt-24 pb-24 from global;
+  composes: pl-16 pr-16 pt-24 pb-24 display-flex from global;
   background-color: var(--color-grey-800);
-  color: var(--color-white);
   border-radius: 4px 4px 0 0;
+  justify-content: space-between;
+}
+
+.header-text {
+  color: var(--color-white);
+}
+
+.logout-button {
+  composes: btn-inline from global;
+  color: var(--color-white);
 }
