--- a/src/routes/Chat/components/ChatMessage/ChatMessage.css
+++ b/src/routes/Chat/components/ChatMessage/ChatMessage.css
@@ -19,6 +19,32 @@
   word-wrap: break-word;
 }
 
+.text h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+li,
+strong,
+i,
+em {
+  color: inherit;
+}
+
+.text strong {
+  font-weight: 500;
+}
+
+.text a,
+a:active,
+a:visited {
+  color: var(--color-blue-ocean);
+  text-decoration: underline;
+}
+
 .system-text {
   composes: text;
   padding: 4px;
