--- a/src/routes/Chat/components/MessageInput/MessageInput.css
+++ b/src/routes/Chat/components/MessageInput/MessageInput.css
@@ -1,8 +1,15 @@
 .textarea {
-  composes: p-8 display-block border-rounded from global;
+  composes: p-8 display-block mb-8 border-rounded from global;
   resize: none;
   width: 100%;
   min-height: 50px;
   max-height: 150px;
   border: 1px solid var(--color-grey-200);
+}
+
+.image-upload {
+  composes: border-rounded p-8 display-inline-block cursor-pointer from global;
+  border: 1px solid var(--color-blue);
+  background-color: var(--color-blue);
+  color: var(--color-white);
 }
