--- a/src/components/Toast/components/Toast/Toast.css
+++ b/src/components/Toast/components/Toast/Toast.css
@@ -1,5 +1,5 @@
 .container {
-  composes: pl-8 pr-8 pt-16 pb-16 mb-16 border-rounded from global;
+  composes: pl-8 pr-8 pt-16 pb-16 mb-16 border-rounded display-inline-block from global;
   border: 2px solid;
   background-color: var(--color-white);
 }
