--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -61,3 +61,10 @@
 .text-right {
   text-align: right;
 }
+
+.center-viewport {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
